[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Vadim Gorbachev <vadim.gorbachev.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.11.1"
python-dotenv = "^1.1.0"
aiokafka = "^0.12.0"
loguru = "^0.7.3"
prometheus-fastapi-instrumentator = "^7.1.0"
sqlalchemy = "^2.0.40"
uuid7 = "^0.1.0"
redis = "^5.2.1"
orjson = "^3.10.16"
pydantic-settings = "^2.8.1"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
